objects/Rate_Admin_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Administrative_Line_Item__c</fullName>
        <label>Administrative Line Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Exchanges – General</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – Reverse Eligibility</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – Shared Accumulators</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – 3rd Party Stop Loss Reports</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – Claim Data Extracts sent to 3rd Party Vendor</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – Load External Rx Data for Medical Management</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – Load biometric data to MMDB for Medical Management</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – Claim data extract from outside vendor</fullName>
                </value>
                <value>
                    <fullName>Data Exchanges – Automated Eligibility Processing (AEP)</fullName>
                </value>
                <value>
                    <fullName>Other Services – AIM Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Other Services – AIM Retiree Drug Subsidy Support</fullName>
                </value>
                <value>
                    <fullName>Other Services – AIM Standard Package Buy Ups</fullName>
                </value>
                <value>
                    <fullName>Other Services – Custom Website</fullName>
                </value>
                <value>
                    <fullName>Other Services – Hard Copy Benefit Booklets</fullName>
                </value>
                <value>
                    <fullName>Other Services – Provider Directories</fullName>
                </value>
                <value>
                    <fullName>Products – BlueEdge FSA Employer Fee for approved Carve Out Vendor</fullName>
                </value>
                <value>
                    <fullName>Products – OnSite Wellness Coordinators</fullName>
                </value>
                <value>
                    <fullName>Products – Health Worksite Wellness Consulting</fullName>
                </value>
                <value>
                    <fullName>Products – Fitness Works (Corporate Onsite Fitness Center)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Service__c</fullName>
        <label>List Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <label>Miscellaneous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Administrative_Line_Item__c</fullName>
        <label>Other Administrative Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Frequency__c</fullName>
        <label>Other Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Rate Admin Charges</relationshipLabel>
        <relationshipName>Rate_Admin_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Charges__c</fullName>
        <label>Service Charges</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Exchange</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Services</fullName>
                </value>
                <value>
                    <fullName>Other Services</fullName>
                </value>
                <value>
                    <fullName>Product-Related Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>adminNumber__c</fullName>
        <label>adminNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rate Admin Charge</label>
    <nameField>
        <label>Rate Admin Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Admin Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>